# GEHash

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  GEEvaluator_8h.html  GEEvaluator_8h__dep__incl.map  GEEvaluator_8h__dep__incl.md5  GEEvaluator_8h_source.html  GEEvolution_8cpp__incl.md5  GEEvolution_8h.html  GEEvolution_8h__dep__incl.map  GEEvolution_8h__dep__incl.md5  GEHashError_8h.html  GEHashError_8h__dep__incl.map  GEHashError_8h__dep__incl.md5  GEHashError_8h_source.html  GEHash_8h_source.html  GELogger_8cpp__incl.map  GELogger_8h.html  GELogger_8h__dep__incl.map  GELogger_8h__dep__incl.md5  GELogger_8h__incl.map  GELogger_8h_source.html  HTable_8h.html  HTable_8h__dep__incl.map  HTable_8h__dep__incl.md5  HTable_8h_source.html  LICENSE  README.md  annotated.html  classGEEvolution-members.html  classGEHash_1_1GEEvaluator-members.html  classGEHash_1_1GEEvaluator.html  classGEHash_1_1GEEvaluator__coll__graph.map  classGEHash_1_1GEEvaluator__coll__graph.md5  classGEHash_1_1GEEvaluator__inherit__graph.map  classGEHash_1_1GEEvaluator__inherit__graph.md5  classGEHash_1_1GEEvaluator_a3a336747eed92518a00f1d639300e4b6_cgraph.map  classGEHash_1_1GEEvaluator_a3a336747eed92518a00f1d639300e4b6_cgraph.md5  (+75 more)
.github/workflows/: CheckFormatting.yml  CodeCheck.yml  DeployDocs.yml  code_check.yml
cmake/: CodeCoverage.cmake  Doxygen.cmake  Sanitizers.cmake  StandardOptions.cmake  StandardWarnings.cmake  StaticAnalyzers.cmake  catch2.cmake  chaiScript.cmake  gram.cmake  lua.cmake  nlohmann_json.cmake
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in
docs/: GEEvaluator_8cpp.html  GEEvaluator_8cpp__incl.map  GEEvaluator_8cpp__incl.md5  GEEvaluator_8h.html  GEEvaluator_8h__dep__incl.md5  GEEvaluator_8h__incl.map  GEEvaluator_8h__incl.md5  GEEvolution_8cpp.html  GEEvolution_8cpp__incl.map  GEEvolution_8h__incl.map  GEEvolution_8h__incl.md5  GEEvolution_8h_source.html  GEHashError_8h__dep__incl.map  GEHashError_8h__incl.map  GEHashError_8h__incl.md5  GEHashError_8h_source.html  GEHash_8cpp.html  GEHash_8cpp__incl.map  GEHash_8cpp__incl.md5  GEHash_8h.html  GEHash_8h__dep__incl.map  GEHash_8h__dep__incl.md5  GEHash_8h__incl.map  GEHash_8h__incl.md5  GEHash_8h_source.html  GELogger_8cpp.html  GELogger_8cpp__incl.md5  GELogger_8h.html  GELogger_8h__dep__incl.map  GELogger_8h__incl.md5  GELogger_8h_source.html  HTable_8h.html  HTable_8h__dep__incl.map  HTable_8h__dep__incl.md5  HTable_8h__incl.map  HTable_8h__incl.md5  README_8md.html  classGEEvolution.html  classGEHash_1_1GEEvaluator.html  classGEHash_1_1GEEvaluator_a221e6b2bff01cf7d4aeee73b1fbe016b_cgraph.map  (+97 more)
docs/search/: all_1.js  all_10.js  all_11.js  all_13.js  all_5.js  all_7.js  all_9.js  all_b.js  all_e.js  all_f.js  classes_1.js  classes_2.js  files_1.js  files_5.js  functions_2.js  functions_4.js  functions_5.js  functions_7.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  namespaces_0.js  pages_1.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_7.js  variables_9.js  variables_a.js  variables_b.js
examples/: exam_grammar.txt  train_set_example.data
include/: CMakeLists.txt  GEEvaluator.h  GEEvolution.h  GEHash.h  GELogger.h  HTable.h  driver.h  evaluator.h  evolution.h  hashTable.h  logger.h
include/error/: GEHashError.h  geError.h  hashError.h  loggerError.h
include/evaluator/: auxiliary.h  eval.h  math_func.h  parser.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+24 more)
src/: CMakeLists.txt  GEEvaluator.cpp  GEEvolution.cpp  GEHash.cpp  GELogger.cpp  driver.cpp  evaluator.cpp  evolution.cpp  evolution.h  logger.cpp  main.cpp
src/evaluator/: eval.cpp  math_func.cpp  parser.cpp
test/: CMakeLists.txt
test/unit/: CMakeLists.txt  unit_main.cpp
